# takin_ill

./: .gitignore  CITATION.cff  README.md  REPOSITORIES
core/: .gitignore  CMakeLists.txt  LICENSES.txt  README.md
core/dialogs/: AboutDlg.cpp  AboutDlg.h  AtomsDlg.cpp  AtomsDlg.h  DWDlg.cpp  DWDlg.h  DarkAnglesDlg.cpp  DarkAnglesDlg.h  DeadAnglesDlg.cpp  DeadAnglesDlg.h  DynPlaneDlg.cpp  DynPlaneDlg.h  ElasticDlg.cpp  ElasticDlg.h  EllipseDlg.cpp  EllipseDlg.h  EllipseDlg3D.cpp  EllipseDlg3D.h  FavDlg.cpp  FavDlg.h  FilePreviewDlg.cpp  FilePreviewDlg.h  GenPosDlg.cpp  GenPosDlg.h  GotoDlg.cpp  GotoDlg.h  LogDlg.cpp  LogDlg.h  NetCacheDlg.cpp  NetCacheDlg.h  NeutronDlg.cpp  NeutronDlg.h  PowderDlg.cpp  PowderDlg.h  RecipParamDlg.cpp  ScanMonDlg.cpp  ScanMonDlg.h  ScatteringFactorsDlg.cpp  ScatteringFactorsDlg.h  SettingsDlg.cpp  (+8 more)
core/doc/: documentation.txt
core/libs/: globals.cpp  plotgl.cpp  plotgl.h  version.h
core/pymods/: .dir
core/setup/: clean.sh  get_3rdparty_licenses.sh  install_pymods.py
core/setup_lin/: buildenv_jammy.sh  buildenv_noble.sh  mkdeb_bionic.sh  mkdeb_bullseye.sh  mkdeb_deb10.sh  mkdeb_focal.sh  mkdeb_jammy.sh  mkdeb_noble.sh
core/setup_mac/: Info.plist  InfoModPy.plist  clean_app.sh  cp_app.sh  fix_names.sh
core/setup_mingw/: buildenv.sh  cp_mingw_takin.sh
core/ui/: darkangles.ui  elastic.ui  ellipses.ui  genpos.ui  monteconvo.ui  reso.ui  scanviewer.ui  scatteringfactors.ui  settings.ui  spurions.ui  taz.ui
data/instruments/: in12_pg002_pg002.taz  in20_pg002_pg002.taz  tax.taz  thales_h111_h111.taz  thales_pg002_pg002.taz  thales_si111_pg002.taz
data/samples/: Be.taz  MnSi.taz  Si.taz
mag-core/: .gitignore  CMakeLists.txt  LICENSES
mag-core/libs/: defs.h  loadcif.h  symops.h  voronoi.h
mag-core/setup/: setup_externals.sh
mag-core/setup_lin/: buildenv_noble.sh
mag-core/setup_mac/: InfoBZ.plist  InfoCif2Xml.plist  InfoFindSG.plist  InfoMagDyn.plist  InfoMagStructFact.plist  InfoPol.plist  InfoStructFact.plist
mag-core/tools/: defs.h
mag-core/tools/bz/: CMakeLists.txt  bz.cpp  bz.h  bz_calc.cpp  bz_conf.cpp  bz_conf.h  bz_file.cpp  bz_formulas.cpp  bz_lib.cpp  bz_lib.h  bz_main.cpp  bz_ops.cpp  bz_plot.cpp  bzlib.i  globals.cpp  globals.h  ops.h  plot.cpp  plot.h  plot_cut.cpp  plot_cut.h
mag-core/tools/cif2xml/: CMakeLists.txt  cif2xml.cpp  findsg.cpp
mag-core/tools/magdyn/: CMakeLists.txt  config.cpp  defs.cpp  defs.h  dialogs.cpp  disp.cpp  dispersion.cpp  export.cpp  export_sqe.cpp  file.cpp  graph.h  ground_state.cpp  ground_state.h  gui.cpp  gui_defs.h  helper.h  infos.cpp  infos.h  kernel.cpp  magdyn.cpp  magdyn.h  magdyn_configuration.cpp  magdyn_disp.cpp  magdyn_export.cpp  magdyn_export_sqe.cpp  magdyn_file.cpp  magdyn_gui.cpp  magdyn_kernel.cpp  magdyn_struct.cpp  magdyn_structplot.cpp  magdyn_tables.cpp  main.cpp  main_gui.cpp  notes.cpp  notes.h  panels.cpp  plot_dyn.gpl  settings.h  struct.cpp  struct_plot.cpp  (+9 more)
mag-core/tools/magdyn/dialogs/: ground_state.cpp  ground_state.h  infos.cpp  notes.cpp  struct_plot.h  table_import.cpp  topology.cpp  topology.h  trafos.cpp
mag-core/tools/magdyn/scripts/: plot_dyn.py
mag-core/tools/magdyn/test/: antiferromagnetic_chain.magdyn  antiferromagnetic_chain_2.magdyn  antiferromagnetic_chain_2_with_dmi.magdyn  antiferromagnetic_chain_with_dmi.magdyn  ferromagnetic_chain.magdyn  ferromagnetic_chain_with_dmi.magdyn  helix.magdyn
mag-core/tools/magsgbrowser/: CMakeLists.txt  browser.cpp  browser.h
mag-core/tools/magstructfact/: CMakeLists.txt  magstructfact.cpp  magstructfact.h  magstructfact_file.cpp  magstructfact_nuclei.cpp  magstructfact_plot.cpp
mag-core/tools/moldyn/: CMakeLists.txt  moldyn.cpp  moldyn.h
mag-core/tools/pol/: CMakeLists.txt  pol.cpp  pol_cli.cpp
mag-core/tools/scanbrowser/: CMakeLists.txt  data.cpp  data.h  globals.cpp  globals.h  hacks.cpp  plot.h
mag-core/tools/scanbrowser/cli/: clilexer.l  cliparser.cpp  cliparser.h  cliparser_types.h  funcs.h  sym.cpp
mag-core/tools/setup/: convmag.cpp
mag-core/tools/structfact/: CMakeLists.txt  loadcif.h  structfact.cpp  structfact.h  structfact_file.cpp  structfact_findsg.cpp  structfact_nuclei.cpp  structfact_plot.cpp  structurefactor.cpp
mag-core/tools/tascalc/: cov.py
mag-core/tools_py/bz/: CMakeLists.txt  bzlib.i
mag-core/tools_py/instr/: CMakeLists.txt  convert_data.py  instr.i  instrhelper.py  plot_data.py  tst_instr.py  tst_plot.py
mag-core/tools_py/magdyn/: CMakeLists.txt  magdyn.i  magdyn.py  tst_magdyn.py  tst_magdyn2.py  tst_magdyn3.py
mag-core/tools_py/magdyn/examples/: ferro.py
mag-core/tools_py/magdyn/tests/: ferro.py  lswt.py  magdyn.py  tst_magdyn.py
mag-core/tools_py/tascalc/: cov.py  tas.py
magnon-plugin/: CMakeLists.txt  mag-core
magnon-plugin/src/: magnonmod.cpp  magnonmod.h
setup/: .gitignore  README.md
setup/build_general/: install_pymods.py
setup/build_lin/: build.sh  build_bookworm.sh  build_bullseye.sh  build_jammy.sh  build_noble.sh  buildenv_bionic.sh  buildenv_bookworm.sh  buildenv_jammy.sh  buildenv_noble.sh  mkdeb_bionic.sh  mkdeb_bookworm.sh  mkdeb_bullseye.sh  mkdeb_deb10.sh  mkdeb_focal.sh  mkdeb_jammy.sh  mkdeb_noble.sh
setup/build_mac/: build_brew.sh  clean_app.sh  cp_app.sh  cp_dmg.sh  mk_icon.sh
setup/build_mingw/: build.sh  build_mingw.sh  cp_mingw_takin.sh
setup/cmake/: FindClipper.cmake  FindDl.cmake  FindGFortran.cmake  FindJulia.cmake  FindLapacke.cmake  FindQwt.cmake  FindRtMp.cmake
setup/mirror/: backup.sh  checkout.sh
setup/misc/: loc.gpl  report.py  search_gh.sh
tlibs/: FindMinuit2.cmake  REPOSITORIES  version.cpp  version.h
tlibs/file/: file.h  loadinstr.h  loadinstr_frm.h  loadinstr_h5.h  loadinstr_impl.h  loadinstr_macs.h  loadinstr_psi.h  loadinstr_raw.h  loadinstr_tax.h  loadinstr_trisp.h  prop.h
tlibs/fit/: minuit.h
tlibs/gfx/: gl_font.h  gl_font_impl.h
tlibs/helper/: array.h  thread.h
tlibs/math/: geo.h  linalg.h  linalg2.h  linalg2_impl.h  math.h  stat.h
tlibs/net/: tcp.h  tcp_impl.h
tlibs/phys/: lattice.h  neutrons.h  units.h
tlibs/script/: CMakeLists.txt
tlibs2/: CMakeLists.txt
(+267 files in other folders)
